# Axioma_robot

./: .gitignore  LICENSE  README.md
arduino/odometry/: odometry.ino
axioma_ws/: copy.txt
axioma_ws/src/axioma_bringup/: package.xml  setup.cfg  setup.py
axioma_ws/src/axioma_bringup/axioma_bringup/: manager.py
axioma_ws/src/axioma_bringup/launch/: map1.launch.py  map10.launch.py  map11.launch.py  map12.launch.py  map2.launch.py  map3.launch.py  map4.launch.py  map5.launch.py  map6.launch.py  map7.launch.py  map8.launch.py  map9.launch.py
axioma_ws/src/axioma_cartographer/: CMakeLists.txt  package.xml
axioma_ws/src/axioma_cartographer/launch/: cartographer.launch.py
axioma_ws/src/axioma_gazebo/: CMakeLists.txt  package.xml
axioma_ws/src/axioma_gazebo/env-hooks/: axioma_gazebo.sh.in
axioma_ws/src/axioma_gazebo/launch/: axioma_default.launch.py  axioma_slam.launch.py  sdf_in_gazebo.launch.py
axioma_ws/src/axioma_gazebo/rviz/: axioma.rviz
axioma_ws/src/axioma_gazebo/worlds/: axioma_v2.world  map1.world.xml  map10.world.xml  map2.world.xml  map3.world.xml  map4.world.xml  map5.world.xml  map6.world.xml  map7.world.xml  map8.world.xml  map9.world.xml  turtlebot3.world  world.world  world.world.save
axioma_ws/src/axioma_interfaces/: CMakeLists.txt  package.xml
axioma_ws/src/axioma_map_utils/: package.xml  setup.cfg  setup.py
axioma_ws/src/axioma_nav2/: package.xml  setup.cfg  setup.py
axioma_ws/src/axioma_nav2/launch/: axioma_gazebo_1_launch.py  axioma_gazebo_nav2_launch.py
axioma_ws/src/axioma_nav2/param/: gazebo_nav2_params.yaml  turtlebot3_nav2_param.yaml  turtlebot3_world.yaml
axioma_ws/src/axioma_nav2/rviz/: axioma_nav2_view.rviz
axioma_ws/src/axioma_navigation2/: package.xml  setup.cfg  setup.py
axioma_ws/src/axioma_urdf/: package.xml  setup.py
axioma_ws/src/axioma_urdf/config/: ekf.yaml
axioma_ws/src/axioma_urdf/launch/: view_robot_launch.py
axioma_ws/src/axioma_urdf/urdf/: robot_axioma.sdf  robot_axioma.urdf
axioma_ws/src/axioma_urdf/world/: map11.world.xml
axioma_ws/src/axioma_wanderer/: package.xml  setup.cfg  setup.py
axioma_ws/src/nav2_example/: CMakeLists.txt  README.MD  package.xml
axioma_ws/src/nav2_example/launch/: scooby_gazebo_nav2_launch.py  scooby_nav2_launch.py  turtlesim_nav2_launch.py
axioma_ws/src/nav2_example/param/: MapSAMSUNG_Cartographer.pgm  MapSAMSUNG_Cartographer.yaml  SlamCartographerSimulation.pgm  SlamCartographerUnicamp.pgm  SlamToolboxSimulation.pgm  SlamToolboxUnicamp.pgm  gazebo_nav2_params.yaml  my_nav2_params.yaml  my_nav2_sim_params.yaml  my_world.yaml  my_world2.pgm
axioma_ws/src/nav2_example/rviz/: my_nav2_view.rviz  scooby_nav2_view.rviz
axioma_ws/src/nav2_example/src/: scooby_map_tf2.cpp  turtlesim_tf2.cpp
axioma_ws/src/scooby_description/: CMakeLists.txt  package.xml
axioma_ws/src/scooby_gazebo/: CMakeLists.txt  package.xml
foxy_ws2/src/axioma_urdf/: package.xml  setup.cfg
foxy_ws2/src/cpp_pubsub/: CMakeLists.txt  package.xml
image/: action.html
(+73 files in other folders)
